# zing-rs

./: .env.example  .gitignore  AGENT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Notes.md  README.md  Rules_de.md  Rules_en.md  Shuttle.toml
assets/vector_cards_3.2/: AUTHORS.txt  CHANGELOG_(PROJECT_HISTORY).txt  LGPL 3.0 - LICENSING INFORMATION.txt
src/: card_action.rs  cards.rs  decks.rs  game.rs  lib.rs  main.rs  table.rs  zing_game.rs
zing-game/: Cargo.toml
zing-game/src/: card_action.rs  cards.rs  client_notification.rs  decks.rs  game.rs  lib.rs  zing_ai.rs  zing_game.rs
zing-server/: Cargo.toml
zing-server/assets/: index.html
zing-server/migration/: Cargo.toml
zing-server/migration/src/: lib.rs  m20230924_000001_create_user_table.rs  m20231004_134936_create_table_table.rs  m20231004_134936_m20231004_000002_create_table_table.rs  m20231005_153749_add_game_results_table.rs  m20231005_153749_m20231005_000001_add_game_results_table.rs
zing-server/src/: client_connection.rs  game_error.rs  main.rs  state.rs  table.rs  test_commands.sh  user.rs  util.rs  ws_notifications.rs  zing_state.rs
zing-server/src/entities/: game_results.rs  mod.rs  prelude.rs  table.rs  table_join.rs  user.rs
zing-server/tests/: test_server.rs
zing-ui/: Cargo.toml
zing-ui-lib/: Cargo.toml
zing-ui-lib/src/: app_state.rs  card_sprite.rs  constants.rs  debug.rs  game_logic.rs  lib.rs  zing_layout.rs
zing-ui/src/: card_sprite.rs  constants.rs  game_logic.rs  game_state.rs  layout_state.rs  main.rs  zing_layout.rs
