[package]
name = "zing_game"
version = "0.1.0"
edition = "2021"
description = "card game logic for `Zing`, minimal dependencies (no UI or networking)"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.2"
rand = "0.8.5"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
bevy_reflect = "0.11.2"
