[package]
name = "zing_game"
version = "0.1.0"
edition = "2021"
description = "card game logic for `Zing`, minimal dependencies (no UI or networking)"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[dependencies]
strum = "0.27.0"
strum_macros = "0.27.0"
rand = "0.9.0"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
bevy_reflect = "0.16"
