[package]
name = "zing-server"
version = "0.3.0"
edition = "2021"
description = "Restful Zing game server implementing card game logic and game/table/player management"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[dependencies]
zing_game = { path = "../zing-game" }
migration = { path = "migration" }

axum = { version = "0.7.3", features = ["ws"] }
shuttle-runtime = "0.43.0"
shuttle-axum = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx-native-tls"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sqlx = { version = "0.7.2", features = ["sqlx-postgres"] }
chrono = "0.4.28"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
async-trait = "0.1.73"
tower-cookies = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.12.4", features = ["cookies", "json"] }
