[package]
name = "zing-server"
version = "0.3.0"
edition = "2021"
description = "Restful Zing game server implementing card game logic and game/table/player management"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[dependencies]
zing_game = { path = "../zing-game" }
migration = { path = "migration" }

axum = { version = "0.8.1", features = ["ws"] }
shuttle-runtime = "0.52.0"
shuttle-axum = "0.52.0"
shuttle-shared-db = { version = "0.52.0", features = [
    "postgres",
    "sqlx-native-tls",
] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sqlx = { version = "0.8.3", features = ["sqlx-postgres"] }
chrono = "0.4.39"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-cookies = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
