[package]
name = "zing_ui_lib"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zing_game = { path = "../zing-game" }

bevy = { version = "0.11.2" }
bevy_tweening = "0.8.0"
futures = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.105"
http = "0.2.9"
tracing = "0.1.37"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["cookies"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tungstenite = { version = "0.20.0", features = ["native-tls"] }
bevy-tokio-tasks = "0.11.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ['Headers', 'ErrorEvent', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
ws_stream_wasm = "0.7.4"
tracing-wasm = "0.2.1"
