[package]
name = "zing_ui_lib"
version = "0.2.0"
edition = "2021"
description = "bevy-based card game UI for `Zing`, compilable to WASM"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zing_game = { path = "../zing-game" }
bevy = { version = "0.15", features = [
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_picking",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "png",
    "webgl2",
], default-features = false }
bevy_tweening = "0.12.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.138"
http = "1.2.0"
tracing = { version = "0.1.41", features = ["release_max_level_off"] }
bevy-inspector-egui = { version = "0.29", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["cookies"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = { version = "0.26.1", features = ["native-tls"] }
bevy-tokio-tasks = "0.15"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    'Headers',
    'ErrorEvent',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'MessageEvent',
    'WebSocket',
] }
#tracing-wasm = "0.2.1"
serde-wasm-bindgen = "0.6.5"
