[package]
name = "zing-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
zing_game = { path = "../zing-game" }

bevy = { version = "0.10" }
bevy_tweening = "0.7"
clap = { version = "4.0.32", features = ["derive"] }
futures-util = "0.3.25"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
