[package]
name = "zing-ui"
version = "0.2.0"
edition = "2021"
description = "bevy-based card game UI for `Zing`, client connecting to zing-server"
repository = "https://github.com/hmeine/zing-rs"
license = "MIT"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
zing_ui_lib = { path = "../zing-ui-lib" }
